<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">μNote</string>
    <string name="app_version_name">Beta v1.0</string>
    
    <string name="activity_list_action_mode_select_title_single">1 note</string>
    <string name="activity_list_action_mode_select_title_multiple">%1$s notes</string>
    <string name="activity_list_action_mode_search_select_title_single">1 note</string>
    <string name="activity_list_action_mode_search_select_title_multiple">%1$s notes</string>
    <string name="activity_list_action_mode_search_select_subtitle">Searching for \"%1$s\"</string>
    
    <string name="activity_list_menu_item_search_title">Search</string>
    <string name="activity_list_menu_item_settings_title">Settings</string>
    
    <string name="activity_list_menu_action_mode_select_item_delete_title">Delete</string>
    <string name="activity_list_menu_action_mode_search_item_search_view_title">Search</string>
    
    <string name="activity_list_message_empty_list_title">No Notes Taken</string>
    <string name="activity_list_message_empty_list_body">Tap the pencil button in the lower right-hand corner to begin taking notes.</string>
    <string name="activity_list_message_empty_search_title">No Search Results</string>
    <string name="activity_list_message_empty_search_body">Your search did not turn up any results. Try broadening your query.</string>
    
    <string name="activity_list_search_bubble_hint">Type here to search</string>
    <string name="activity_list_search_open_title">Search Notes</string>
    <string name="activity_list_search_open_body">Enter a query in the bubble below to begin searching through your notes.</string>
    
    <string name="activity_edit_menu_item_rename_title">Rename</string>
    <string name="activity_edit_menu_item_delete_title">Delete</string>
    
    <string name="activity_edit_menu_item_checklist">Checklist</string>
    <string name="activity_edit_menu_item_clip">Clip</string>
    <string name="activity_edit_menu_item_list_unordered">Bullets</string>
    <string name="activity_edit_menu_item_list_ordered">Numbering</string>
    
    <string name="activity_edit_constant_default_note_title">Untitled Note</string>
    
    <string name="activity_settings_toolbar_title">Settings</string>
    
    <string name="pref_upgrade_title">Upgrade</string>
    
    <string name="pref_upgrade_adremove_title">Remove Ads</string>
    <string name="pref_upgrade_adremove_summary">Remove ads and support the developer</string>
    
    <string name="pref_style_notepad_title">Notepad Style</string>
    
    <string name="pref_style_notepad_color_text_title">Text Color</string>
    <string name="pref_style_notepad_color_text_summary">%s</string>
    
    <string name="pref_style_notepad_show_lines_title">Show Notepad Lines</string>
    <string name="pref_style_notepad_show_lines_summary_off">Notepad lines will not be shown</string>
    <string name="pref_style_notepad_show_lines_summary_on">Notepad lines will be shown</string>
    
    <string name="pref_timedate_title">Time/Date</string>
    
    <string name="pref_timedate_format_date_title">Date Format</string>
    <string name="pref_timedate_format_date_summary">%s</string>
    
    <string name="pref_timedate_format_time_title">Time Format</string>
    <string name="pref_timedate_format_time_summary">%s</string>
    
    <string name="pref_timedate_scheme_note_timestamp_title">Note Timestamp Scheme</string>
    <string name="pref_timedate_scheme_note_timestamp_summary">%s</string>
    
    <string name="pref_other_title">Other</string>
    
    <string name="pref_other_import_enable_title">Prompt External Import</string>
    <string name="pref_other_import_enable_summary_off">You will not be prompted to import external note files</string>
    <string name="pref_other_import_enable_summary_on">You will be prompted to import external note files</string>
    
    <string name="pref_about_title">About</string>
    
    <string name="pref_about_content_title">μNote Beta v1.0</string>
    <string name="pref_about_content_summary">&#169; 2015 Tyler Filla</string>
    
    <string name="dialog_activity_list_prompt_delete_note_files_title">Confirm Deletion</string>
    <string name="dialog_activity_list_prompt_delete_note_files_message_single">Are you sure you want to delete this note?</string>
    <string name="dialog_activity_list_prompt_delete_note_files_message_multiple">Are you sure you want to delete these %1$s notes?</string>
    
    <string name="dialog_activity_edit_alert_note_file_read_failed_title">Read Failed</string>
    <string name="dialog_activity_edit_alert_note_file_read_failed_message">Unable to read note file at %1$s due to the following exception: %2$s</string>
    
    <string name="dialog_activity_edit_alert_note_file_import_disabled_title">Import Disabled</string>
    <string name="dialog_activity_edit_alert_note_file_import_disabled_message">You can re-enable this feature in the settings menu.</string>
    
    <string name="dialog_activity_edit_prompt_note_file_import_title">Import Note</string>
    <string name="dialog_activity_edit_prompt_note_file_import_message">Would you like to import a copy of this note?</string>
    <string name="dialog_activity_edit_prompt_note_file_import_stop_text">Stop asking to import notes</string>
    
    <string name="dialog_activity_edit_prompt_rename_title">Rename Note</string>
    <string name="dialog_activity_edit_prompt_rename_message">Please enter a new title below.</string>
    
    <string name="dialog_activity_edit_prompt_delete_note_file_title">Confirm Deletion</string>
    <string name="dialog_activity_edit_prompt_delete_note_file_message">Are you sure you want to delete this note?</string>
    
    <string name="toast_activity_list_confirm_delete_note_files_single">Deleted 1 note</string>
    <string name="toast_activity_list_confirm_delete_note_files_multiple">Deleted %1$s notes</string>
    
    <string name="toast_activity_purchase_success">Purchase successful</string>
    <string name="toast_activity_purchase_fail">Purchase failed</string>
    
    <string name="admob_unit_id_activity_list_ad">ca-app-pub-1168572156310866/6463250837</string>
    
    <string name="color_namer_base_black">black</string>
    <string name="color_namer_base_white">white</string>
    
    <string name="color_namer_hue_red">red</string>
    <string name="color_namer_hue_yellow">yellow</string>
    <string name="color_namer_hue_green">green</string>
    <string name="color_namer_hue_cyan">cyan</string>
    <string name="color_namer_hue_blue">blue</string>
    <string name="color_namer_hue_magenta">magenta</string>

</resources>
