<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory
        android:key="pref_upgrade"
        android:persistent="false"
        android:title="@string/pref_upgrade_title">
        
        <Preference
            android:key="pref_upgrade_adremove"
            android:persistent="false"
            android:summary="@string/pref_upgrade_adremove_summary"
            android:title="@string/pref_upgrade_adremove_title">
            
            <intent
                android:targetPackage="io.microdev.note"
                android:targetClass="io.microdev.note.activity.ActivityPurchase">
                
                <extra
                    android:name="SKU"
                    android:value="ad_removal" />
                
                <extra
                    android:name="TYPE"
                    android:value="inapp" />
            
            </intent>
        
        </Preference>
    
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="pref_style_notepad"
        android:persistent="false"
        android:title="@string/pref_style_notepad_title">
        
        <io.microdev.note.pref.ColorPreference
            android:defaultValue="@color/notepad_text_default"
            android:entries="@array/array_pref_list_entries_style_notepad_text_color"
            android:entryValues="@array/array_pref_list_values_style_notepad_text_color"
            android:key="pref_style_notepad_text_color"
            android:persistent="true"
            android:summary="@string/pref_style_notepad_text_color_summary"
            android:title="@string/pref_style_notepad_text_color_title" />
        
        <io.microdev.note.pref.SwitchPreferenceCompat
            android:defaultValue="true"
            android:disableDependentsState="false"
            android:key="pref_style_notepad_show_lines"
            android:persistent="true"
            android:summaryOff="@string/pref_style_notepad_show_lines_summary_off"
            android:summaryOn="@string/pref_style_notepad_show_lines_summary_on"
            android:title="@string/pref_style_notepad_show_lines_title" />
    
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="pref_other"
        android:persistent="false"
        android:title="@string/pref_other_title">
        
        <io.microdev.note.pref.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_other_import_enable"
            android:persistent="true"
            android:summaryOff="@string/pref_other_import_enable_summary_off"
            android:summaryOn="@string/pref_other_import_enable_summary_on"
            android:title="@string/pref_other_import_enable_title" />
    
    </PreferenceCategory>

</PreferenceScreen>
